--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -6,10 +6,7 @@
         <p></p>
         <div class="hero-buttons">
           <a href="#" class="btn-book-a-table">Book a Table</a>
-          <a
-            href="https://www.youtube.com/watch?v=JlK8l_lvBko"
-            class="glightbox btn-watch-video"
-          >
+          <a href="" class="glightbox btn-watch-video">
             <i class="bi bi-play-circle"></i><span>Watch Video</span>
           </a>
         </div>
