--- a/web/src/app/search-restaurants/search-restaurants.component.html
+++ b/web/src/app/search-restaurants/search-restaurants.component.html
@@ -15,7 +15,7 @@
       ></div>
       <div class="col-lg-8 d-flex align-items-center reservation-form-bg">
         <div style="margin: 10px">
-          <div class="row gy-4">
+          <div class="row gy-4" *ngIf="isAdminOrSuperAdmin()">
             <div class="col-lg-8 col-md-8">
               <!-- Select control for listing restaurants -->
               <div class="form-group">
