Restaurant tiles and navigation to details page

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -28,41 +28,17 @@
         <li>
           <a
             href="#"
+            [routerLink]="['/restaurants']"
+            routerLinkActive="router-link-active"
+            >Restaurants</a
+          >
+        </li>
+        <li>
+          <a
+            href="#"
             [routerLink]="['/about']"
             routerLinkActive="router-link-active"
             >About</a
-          >
-        </li>
-        <li>
-          <a
-            href="#"
-            [routerLink]="['/menu']"
-            routerLinkActive="router-link-active"
-            >Menu</a
-          >
-        </li>
-        <li>
-          <a
-            href="#"
-            [routerLink]="['/events']"
-            routerLinkActive="router-link-active"
-            >Events</a
-          >
-        </li>
-        <li>
-          <a
-            href="#"
-            [routerLink]="['/chefs']"
-            routerLinkActive="router-link-active"
-            >Chefs</a
-          >
-        </li>
-        <li>
-          <a
-            href="#"
-            [routerLink]="['/gallery']"
-            routerLinkActive="router-link-active"
-            >Gallery</a
           >
         </li>
         <li>
