--- a/web/src/app/restaurants/restaurants.component.html
+++ b/web/src/app/restaurants/restaurants.component.html
@@ -60,7 +60,7 @@
             <button
               type="button"
               class="btn-details"
-              (click)="navigateToDetailsPage(restaurant.id)"
+              (click)="navigateToDetailsPage(restaurant)"
             >
               View Details
             </button>
