--- a/web/src/app/restaurant-details/restaurant-details.component.html
+++ b/web/src/app/restaurant-details/restaurant-details.component.html
@@ -1,42 +1,28 @@
-  <!-- ======= About Section ======= -->
-  <section id="about" class="about">
-    <div class="container" data-aos="fade-up">
-
-      <div class="section-header">
-        <h2>About Us</h2>
-        <p>Learn More <span>About Us</span></p>
-      </div>
-
-      <div class="row gy-4">
-        <div class="col-lg-7 position-relative about-img" style="background-image: url(assets/img/about.jpg) ;" data-aos="fade-up" data-aos-delay="150">
-          <div class="call-us position-absolute">
-            <h4>Book a Table</h4>
-            <p>+1 5589 55488 55</p>
-          </div>
-        </div>
-        <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
-          <div class="content ps-0 ps-lg-5">
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
-            <ul>
-              <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check2-all"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-            </ul>
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
-            </p>
-
-            <div class="position-relative mt-4">
-              <img src="assets/img/about-2.jpg" class="img-fluid" alt="">
-              <a href="https://www.youtube.com/watch?v=JlK8l_lvBko" class="glightbox play-btn"></a>
-            </div>
-          </div>
+<section id="hero" class="hero section-bg">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-5 hero-text order-2 order-lg-1">
+        <h3>{{ selectedRestaurant?.name }}</h3>
+        <h4>{{ selectedRestaurant?.address }}</h4>
+        <h4>{{ selectedRestaurant?.openTime }}</h4>
+        <p></p>
+        <div class="hero-buttons">
+          <a href="#" class="btn-book-a-table">Book a Table</a>
         </div>
       </div>
-
+      <div class="col-lg-5 hero-image order-1 order-lg-2">
+        <img [src]="selectedRestaurant?.imageUrl" class="img-fluid" alt="" />
+      </div>
     </div>
-  </section><!-- End About Section -->
+  </div>
+</section>
+<section id="restaurant-details">
+  <div class="container">
+    <div class="menu-options">
+      <a href="#menu" class="tab-link">Menu</a>
+      <a href="#chefs" class="tab-link">Chefs</a>
+      <a href="#events" class="tab-link">Events</a>
+      <a href="#reviews" class="tab-link">Reviews</a>
+    </div>
+  </div>
+</section>
