--- a/web/src/app/home/home.component.css
+++ b/web/src/app/home/home.component.css
@@ -19,10 +19,13 @@
 
 .hero-text h2 {
   animation: fade-up 0.5s ease-out;
+  margin-bottom: 20px;
 }
 
 .hero-text p {
   animation: fade-up 0.6s ease-out;
+  font-size: 1.2em;
+  margin-bottom: 30px;
 }
 
 .hero-buttons {
@@ -32,10 +35,36 @@
 
 .hero-buttons .btn-book-a-table {
   margin-right: 10px;
+  border-radius: 10px;
 }
 
 .hero-image img {
   animation: zoom-out 0.8s ease-out;
+}
+
+.register-banner {
+  margin-top: 80px;
+  width: 90%;
+  padding: 15px 20px 25px 20px;
+  background-color: rgba(255, 193, 7, 0.8);
+  border-radius: 5px;
+}
+
+.register-banner p {
+  font-size: 1.4em;
+  margin-bottom: 10px;
+  color: black;
+}
+
+.register-banner .btn-book-a-table {
+  margin-top: 10px;
+  border-radius: 5px;
+  background-color: white;
+  color: black;
+}
+
+.register-banner .btn-book-a-table:hover {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
 }
 
 /* Animation keyframes */
