--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -1,14 +1,19 @@
 <section id="hero" class="hero section-bg">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-5 hero-text order-2 order-lg-1">
+    <div class="row justify-content-between">
+      <div class="col-lg-7 hero-text order-2 order-lg-1">
         <h2>Enjoy Your Healthy<br />Delicious Food</h2>
-        <p></p>
         <div class="hero-buttons">
           <a href="#" class="btn-book-a-table">Book a Table</a>
           <a href="" class="glightbox btn-watch-video">
             <i class="bi bi-play-circle"></i><span>Watch Video</span>
           </a>
+        </div>
+        <div class="register-banner">
+          <p>Are you a restaurant owner?</p>
+          <a href="/restaurants/register" class="btn-book-a-table"
+            >Register Your Restaurant</a
+          >
         </div>
       </div>
       <div class="col-lg-5 hero-image order-1 order-lg-2">
