Change the hero image

--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -5,9 +5,9 @@
         <h2>Enjoy Your Healthy<br />Delicious Food</h2>
         <div class="hero-buttons">
           <a href="#" class="btn-book-a-table">Book a Table</a>
-          <a href="" class="glightbox btn-watch-video">
-            <i class="bi bi-play-circle"></i><span>Watch Video</span>
-          </a>
+          <a href="/restaurants" class="btn-book-a-table"
+            >Explore Restaurants</a
+          >
         </div>
         <div class="register-banner">
           <p>Are you a restaurant owner?</p>
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="col-lg-5 hero-image order-1 order-lg-2">
-        <img src="assets/img/hero-img.png" class="img-fluid" alt="" />
+        <img src="assets/img/hero-img-2.png" class="img-fluid" alt="" />
       </div>
     </div>
   </div>
