Revert "Dynamically populate a list of branches of the selected restaurant"
This reverts commit 110cf3d65266a6e90b30ef271d5645ae0ad7bf05.

--- a/web/src/app/search-restaurants/search-restaurants.component.html
+++ b/web/src/app/search-restaurants/search-restaurants.component.html
@@ -58,7 +58,7 @@
                   class="form-control"
                   id="restaurantSelect"
                   [(ngModel)]="selectedRestaurantId"
-                  (ngModelChange)="onRestaurantSelected($event)"
+                  (ngModelChange)="filterBranches($event)"
                 >
                   <option selected value="-1">Select a Restaurant</option>
                   <option
